4.5.0 (unreleased)
------------------
  * Add GtkStatusbar commands that take a context id argument.
  * Add support for changing widget size.

4.4.0 (2015-12-12)
------------------
  * Fix a subtle GTK-related bug where freshly created fifos vanished.
  * Fix a bug involving GTK+ 3.14 and GtkTreeView.
  * Add a --display option.

4.3.0 (2015-11-30)
------------------
  * Support GtkTreeStore.
  * Support editing in GtkTreeView.
  * Data behind GtkTextView and GtkTreeView can be saved into files
  where they are stored as a sequence of ordinary pipeglade commands.
  * Arbitrary commands can be read from files.
  * Setting fields of a non-existing GtkTreeStore/GtkListStore row
  automatically creates any nodes necessary in the supporting tree
  structure.

4.2.0 (2015-11-08)
------------------
  * Support GtkWindow moving and resizing.
  * Eliminate any use of sleep(), avoiding spinning.

4.1.0 (2015-10-02)
------------------
  * Add support for the XEmbed protocol, both as a GtkPlug and a
  GtkSocket.
  * Add support for GtkPrintUnixDialog.
  * Improve build process.

4.0.0 (2015-09-23)
------------------
  * Change API: Remove deprecated commands override_color,
  override_background_color, and override_font.
  * Disable runtime GLIB deprecation warnings.

3.1.1 (2015-09-22)
------------------
  * Fix 3.1.0 which lacked most of the advertised changes.

3.1.0 (2015-09-22)
------------------
  * Code cleanup.
  * Add command for changing widget style properties.
  * Deprecate commands override_color, override_background_color, and
  override_font.

3.0.0 (2015-02-27)
------------------
  * Change API: No user-visible callbacks anymore, simplifying UI
  creation.  (There are a few additional naming conventions, though.)
  * Change API: Changed feedback messages for a couple of widgets.
  * Synthetically fired events have become a bit more useful.
  * Improve handling of GtkProgressBar and GtkStatusbar.

2.2.0 (2015-02-20)
------------------