@@ -365,6 +365,26 @@ check_error "calendar1:select_date 2000-12-33" "ignoring GtkCalendar command \"c
 check_error "calendar1:select_date 2000-13-20" "ignoring GtkCalendar command \"calendar1:select_date 2000-13-20\""
 GtkSocket
 check_error "socket1:nnn" "ignoring GtkSocket command \"socket1:nnn\""
+GtkScrolledWindow
+check_error "scrolledwindow3:nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:nnn\""
+check_error "scrolledwindow3:hscroll" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll\""
+check_error "scrolledwindow3:hscroll " "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll \""
+check_error "scrolledwindow3:hscroll nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll nnn\""
+check_error "scrolledwindow3:vscroll" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll\""
+check_error "scrolledwindow3:vscroll " "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll \""
+check_error "scrolledwindow3:vscroll nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll nnn\""
+check_error "scrolledwindow3:hscroll_to_range" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range\""
+check_error "scrolledwindow3:hscroll_to_range " "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range \""
+check_error "scrolledwindow3:hscroll_to_range nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range nnn\""
+check_error "scrolledwindow3:hscroll_to_range 10" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range 10\""
+check_error "scrolledwindow3:hscroll_to_range 10 nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range 10 nnn\""
+check_error "scrolledwindow3:hscroll_to_range nnn 10" "ignoring GtkScrolledWindow command \"scrolledwindow3:hscroll_to_range nnn 10\""
+check_error "scrolledwindow3:vscroll_to_range" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range\""
+check_error "scrolledwindow3:vscroll_to_range " "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range \""
+check_error "scrolledwindow3:vscroll_to_range nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range nnn\""
+check_error "scrolledwindow3:vscroll_to_range 10" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range 10\""
+check_error "scrolledwindow3:vscroll_to_range 10 nnn" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range 10 nnn\""
+check_error "scrolledwindow3:vscroll_to_range nnn 10" "ignoring GtkScrolledWindow command \"scrolledwindow3:vscroll_to_range nnn 10\""
 # GtkDrawingArea
 check_error "drawingarea1:nnn" "ignoring GtkDrawingArea command \"drawingarea1:nnn\""
 check_error "drawingarea1:rectangle" "ignoring GtkDrawingArea command \"drawingarea1:rectangle\""
@@ -822,6 +842,11 @@ check 0 "drawingarea2:remove 3\n drawingarea2:refresh"
 check 1 "statusbar1:push Press the biggest button if there is a spinning spinner\n spinner1:start\n no_button:set_size_request 400 400" "no_button:clicked"
 check 1 "statusbar1:push Press \"OK\" if the spinner has stopped\n spinner1:stop" "button1:clicked"
 check 1 "statusbar1:push Press \"OK\" if the \"No\" button is back to normal size\n no_button:set_size_request" "button1:clicked"
+
+check 0 "notebook1:set_current_page 3"
+check 1 "statusbar1:push Click into page 4 (vscroll)\n scrolledwindow8:vscroll 4500" "button_sw:clicked"
+check 1 "statusbar1:push Click into page 4 (hscroll)\n scrolledwindow8:hscroll 4500" "button_se:clicked"
+check 1 "statusbar1:push Click into page 4 (hscroll_to_range, vscroll_to_range)\n scrolledwindow8:hscroll_to_range 1600 2900\n scrolledwindow8:vscroll_to_range 1600 2900" "button_c:clicked"
 
 check 1 "statusbar1:push Press \"OK\" if we are fullscreen now\n main:fullscreen" "button1:clicked"
 check 1 "statusbar1:push Press \"OK\" if we are back to default size\n main:unfullscreen" "button1:clicked"
