@@ -37,7 +37,8 @@
             <a href="https://developer.gnome.org/gtk3/stable/GtkWindow.html">containers</a>:
             <a href="https://developer.gnome.org/gtk3/stable/GtkNotebook.html">notebook</a>,
             <a href="https://developer.gnome.org/gtk3/stable/GtkExpander.html">expander</a>,
-            <a href="https://developer.gnome.org/gtk3/stable/GtkFrame.html">frame</a>;
+            <a href="https://developer.gnome.org/gtk3/stable/GtkFrame.html">frame</a>,
+            <a href="https://developer.gnome.org/gtk3/stable/GtkScrolledWindow.html">scrolled window</a>;
           <li class="list list-dash">
             <a href="https://developer.gnome.org/gtk3/stable/GtkButton.html">buttons</a>:
             <a href="https://developer.gnome.org/gtk3/stable/GtkCheckButton.html">check
